// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom plugins, custom categories > customPluginCustomCategories 1`] = `
{
  "no-await-in-loop": "off",
}
`;

exports[`custom plugins, default categories > customPluginDefaultCategories 1`] = `
{
  "no-async-promise-executor": "off",
  "no-caller": "off",
  "no-class-assign": "off",
  "no-cond-assign": "off",
  "no-const-assign": "off",
  "no-constant-binary-expression": "off",
  "no-constant-condition": "off",
  "no-control-regex": "off",
  "no-delete-var": "off",
  "no-dupe-class-members": "off",
  "no-dupe-else-if": "off",
  "no-dupe-keys": "off",
  "no-duplicate-case": "off",
  "no-empty-character-class": "off",
  "no-empty-pattern": "off",
  "no-ex-assign": "off",
  "no-func-assign": "off",
  "no-global-assign": "off",
  "no-import-assign": "off",
  "no-invalid-regexp": "off",
  "no-irregular-whitespace": "off",
  "no-loss-of-precision": "off",
  "no-new-native-nonconstructor": "off",
  "no-obj-calls": "off",
  "no-self-assign": "off",
  "no-setter-return": "off",
  "no-shadow-restricted-names": "off",
  "no-sparse-arrays": "off",
  "no-this-before-super": "off",
  "no-unsafe-finally": "off",
  "no-unsafe-optional-chaining": "off",
  "no-unused-private-class-members": "off",
  "no-useless-catch": "off",
  "no-useless-rename": "off",
  "no-with": "off",
  "require-yield": "off",
  "unicorn/no-await-in-promise-methods": "off",
  "unicorn/no-document-cookie": "off",
  "unicorn/no-empty-file": "off",
  "unicorn/no-invalid-remove-event-listener": "off",
  "unicorn/no-thenable": "off",
}
`;

exports[`default plugins (react, unicorn, typescript), default categories > defaultPluginDefaultCategories 1`] = `
{
  "@typescript-eslint/no-dupe-class-members": "off",
  "@typescript-eslint/no-duplicate-enum-values": "off",
  "@typescript-eslint/no-extra-non-null-assertion": "off",
  "@typescript-eslint/no-loss-of-precision": "off",
  "@typescript-eslint/no-misused-new": "off",
  "@typescript-eslint/no-non-null-asserted-optional-chain": "off",
  "@typescript-eslint/no-this-alias": "off",
  "@typescript-eslint/no-unsafe-declaration-merging": "off",
  "@typescript-eslint/triple-slash-reference": "off",
  "no-async-promise-executor": "off",
  "no-caller": "off",
  "no-class-assign": "off",
  "no-cond-assign": "off",
  "no-const-assign": "off",
  "no-constant-binary-expression": "off",
  "no-constant-condition": "off",
  "no-control-regex": "off",
  "no-delete-var": "off",
  "no-dupe-class-members": "off",
  "no-dupe-else-if": "off",
  "no-dupe-keys": "off",
  "no-duplicate-case": "off",
  "no-empty-character-class": "off",
  "no-empty-pattern": "off",
  "no-ex-assign": "off",
  "no-func-assign": "off",
  "no-global-assign": "off",
  "no-import-assign": "off",
  "no-invalid-regexp": "off",
  "no-irregular-whitespace": "off",
  "no-loss-of-precision": "off",
  "no-new-native-nonconstructor": "off",
  "no-obj-calls": "off",
  "no-self-assign": "off",
  "no-setter-return": "off",
  "no-shadow-restricted-names": "off",
  "no-sparse-arrays": "off",
  "no-this-before-super": "off",
  "no-unsafe-finally": "off",
  "no-unsafe-optional-chaining": "off",
  "no-unused-private-class-members": "off",
  "no-useless-catch": "off",
  "no-useless-rename": "off",
  "no-with": "off",
  "react/jsx-key": "off",
  "react/jsx-no-duplicate-props": "off",
  "react/jsx-no-target-blank": "off",
  "react/jsx-no-undef": "off",
  "react/no-children-prop": "off",
  "react/no-danger-with-children": "off",
  "react/no-direct-mutation-state": "off",
  "react/no-find-dom-node": "off",
  "react/no-is-mounted": "off",
  "react/no-render-return-value": "off",
  "react/no-string-refs": "off",
  "react/void-dom-elements-no-children": "off",
  "require-yield": "off",
  "unicorn/no-await-in-promise-methods": "off",
  "unicorn/no-document-cookie": "off",
  "unicorn/no-empty-file": "off",
  "unicorn/no-invalid-remove-event-listener": "off",
  "unicorn/no-thenable": "off",
}
`;
